@@ -7,7 +7,11 @@
  * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
+apply plugin: 'elasticsearch.publish'
 apply plugin: 'elasticsearch.build'
+apply plugin: 'elasticsearch.mrjar'
+
+import org.elasticsearch.gradle.internal.precommit.CheckForbiddenApisTask
 
 base {
   archivesName = "x-content-impl"
@@ -23,16 +27,11 @@ dependencies {
   implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
   implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:${jacksonVersion}"
   implementation "org.yaml:snakeyaml:${versions.snakeyaml}"
+  implementation "org.simdjson:simdjson-java:0.3.0"
 
   testImplementation(project(":test:framework")) {
     exclude group: 'org.elasticsearch', module: 'x-content'
   }
-}
-
-tasks.named('forbiddenApisMain').configure {
-  // x-content does not depend on server
-  // TODO: Need to decide how we want to handle for forbidden signatures with the changes to core
-  replaceSignatureFiles 'jdk-signatures'
 }
 
 tasks.named("dependencyLicenses").configure {
@@ -54,4 +53,24 @@ tasks.named("thirdPartyAudit").configure {
     'com.fasterxml.jackson.databind.ObjectMapper',
     'com.fasterxml.jackson.databind.cfg.MapperBuilder'
   )
+}
+
+// For JsonSimdXContentParser
+// compileMain21Java does not exist within idea (see MrJarPlugin) so we cannot reference directly by name
+tasks.matching { it.name == "compileMain21Java" }.configureEach {
+  options.compilerArgs << '--add-modules=jdk.incubator.vector'
+  // we remove Werror, since incubating suppression (-Xlint:-incubating)
+  // is only support since JDK 22
+  options.compilerArgs -= '-Werror'
+}
+
+
+tasks.named('test').configure {
+  if (buildParams.getRuntimeJavaVersion().map{ it.majorVersion.toInteger() }.get() >= 21) {
+    jvmArgs '--add-modules=jdk.incubator.vector'
+  }
+}
+
+tasks.withType(CheckForbiddenApisTask).configureEach {
+  replaceSignatureFiles 'jdk-signatures'
 }
